<resources>
    <string name="app_name">Minha Comunidade</string>
    <string name="descImgStart">Logo do aplicativo, 4 pessoas em cores diferentes dando as mãos.</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="tela_de_login">Tela de login</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="cidade">Cidade</string>
    <string name="proximo">Próximo</string>

    <string name="add_foto_perfil">Foto de perfil</string>
    <string name="pular">Pular</string>
    <string name="salvar">Salvar</string>
    <string name="feed">Feed</string>
    <string name="buscar">Buscar projetos</string>

    <string name="perfilActivity">Visualizar perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slecao_grupos_titulo">Selecione seus grupos:</string>
    <string name="selecao_grupos_descricao">Os grupos serão usados para mostrar os projetos voluntários em seus grupos(zonas) de interesse. Você pode selecionar mais de um grupo.</string>
    <string name="finalizar">Finalizar</string>
    <string name="acessar_perfil">Acessar o perfil</string>
    <string name="meus_projetos">Meus Projetos</string>
    <string name="titulo_projeto">Título do projeto</string>
    <string name="selecionar_grupo">Selecione um grupo</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="voluntarios_necessarios">Voluntários necessários:</string>
    <string name="grupos">Grupos:</string>
    <string name="novo_projeto">Novo Projeto</string>
    <string name="tags">Tags:</string>
    <string name="local">Local:</string>
    <string name="carregar_imagens_projeto">Carregar imagens do projeto</string>
    <string name="carregar_imagens">Carregar Imagens</string>
    <string name="enter_email">Por favor entre com um e-mail</string>
    <string name="enter_valid_email">Por favor entre com um e-mail válido</string>
    <string name="enter_password">Por favor entre com sua senha</string>
    <string name="auth_failed">Falha na autenticação</string>
    <string name="esqueceu_senha">Esqueceu a senha?</string>
    <string name="reset_senha">Resetar</string>
    <string name="email_enviado">Email para resetar a senha enviado.</string>
    <string name="sair">Sair</string>
    <string name="usuario_salvo">Usuário salvo com sucesso</string>
    <string name="enter_name">Digite o seu nome</string>
    <string name="user_creation_failed">Falha ao criar usuário</string>
    <string name="invalid_intent">Falha ao carregar imagem</string>
    <string name="no_photo_returned">Nenhuma foto foi retornada</string>
    <string name="ask_read_permission">Precisamos de permissão para acessar algumas imagens da galeria</string>
    <string name="read_permission_required">Permissão necessária</string>
    <string name="upload_image_failed">Falha no upload da imagem</string>
    <string name="enter_titulo">Por favor, entre com um título de projeto</string>
    <string name="enter_valid_date">Formatação de data inválida, entre uma data válida.</string>
    <string name="descricao">Descrição:</string>
    <string name="enter_description">Uma descrição para o seu projeto é muito importante!!!</string>
    <string name="falha_ao_criar_projeto">Falha ao criar projeto</string>
</resources>
