<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
      tools:context="br.edu.ufabc.padm.minhacomunidade.view.FeedFragment">

    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_search_white_40dp"
          android:title="@string/buscar"
          yourapp:showAsAction="ifRoom"/>

    <item android:id="@+id/action_perfil"
          android:icon="@drawable/ic_action_perfil"
          android:title="@string/acessar_perfil"
          yourapp:showAsAction="ifRoom"/>

    <item android:id="@+id/action_meus_projetos"
          android:title="@string/meus_projetos"
          yourapp:showAsAction="never"/>

    <item android:id="@+id/log_out_action"
          android:title="@string/sair"
          yourapp:showAsAction="never"/>

</menu>