<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView android:layout_width="150dp" android:layout_height="150dp" android:src="@drawable/ic_round_app_icon"
               app:srcCompat="@drawable/ic_round_app_icon"
               android:scaleType="centerCrop" android:id="@+id/StartIcon"
               android:contentDescription="@string/descImgStart"
               android:layout_marginTop="60dp"
               android:layout_gravity="center"
               tools:visibility="visible" tools:srcCompat="@drawable/ic_round_app_icon"/>

    <EditText android:id="@+id/email_entry"
              android:hint="@string/email"
              android:textSize="20sp"
              android:layout_marginTop="40dp"
              android:layout_marginStart="10dp"
              android:layout_marginEnd="10dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textEmailAddress"/>

    <EditText android:id="@+id/senha_entry"
              android:hint="@string/senha"
              android:textSize="20sp"
              android:layout_marginTop="20dp"
              android:layout_marginStart="10dp"
              android:layout_marginEnd="10dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword"/>

    <Button android:id="@+id/login_btn" android:layout_width="200dp" android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:background="@color/primaryTextColor"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_marginTop="60dp"
            android:textAlignment="center" android:layout_gravity="center"/>

    <Button android:id="@+id/esqueceu_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/esqueceu_senha"
            android:layout_gravity="center"/>

</LinearLayout>