<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LandingFragment"
        android:background="@color/colorPrimaryLight">


    <ImageView android:layout_width="200dp" android:layout_height="200dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_round_app_icon"
               android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintVertical_bias="0.1" android:id="@+id/StartIcon"
               android:contentDescription="@string/descImgStart"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/primaryTextColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/StartLabel"/>


    <Button android:id="@+id/login_btn" android:layout_width="300dp" android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:background="@color/primaryTextColor"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.735" app:layout_constraintHorizontal_bias="0.504"/>

    <Button android:id="@+id/cadastrar_btn" android:layout_width="300dp" android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.876"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>