<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".Cadastro.CadastroGruposFragment" android:orientation="vertical"
              android:background="@color/colorPrimaryLight">


    <TextView
            android:text="@string/slecao_grupos_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/titulo_selecao_grupos"
            android:layout_marginTop="8dp"
            android:textSize="30sp" android:textColor="@color/primaryTextColor"
            android:textAlignment="textStart" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.059"/>
    <TextView
            android:text="@string/selecao_grupos_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/descricao_selecao_grupos"
            android:textSize="14sp" android:textColor="@color/primaryTextColor"
            app:layout_constraintTop_toBottomOf="@+id/titulo_selecao_grupos"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="8dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/descricao_selecao_grupos"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button">
        <ListView
                android:id="@+id/grupos_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="multipleChoice">

        </ListView>
    </ScrollView>
    <Button
            android:text="@string/finalizar"
            android:layout_width="300dp"
            android:layout_height="wrap_content" android:id="@+id/button"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/descricao_selecao_grupos"
            app:layout_constraintVertical_bias="0.787"
            android:background="@color/primaryTextColor"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:padding="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>